Closed Bug 1691256 Opened 4 years ago Closed 4 years ago

Context Menu - can't make any selection (mouse-hover focus flickers on menu entries)

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

Firefox 85
defect

Tracking

()

VERIFIED FIXED
87 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox85 --- wontfix
firefox86 --- wontfix
firefox87 - verified

People

(Reporter: ablatt, Assigned: emilio)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files, 1 obsolete file)

Attached video Context Menu Bug.mov

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.15; rv:85.0) Gecko/20100101 Firefox/85.0

Steps to reproduce:

Choose a bookmarks menu from the toolbar, right click on a bookmark in that menu to be able to delete the item from the context menu.

Actual results:

Can't choose any context menu items. Cursor flashes.

Expected results:

Cursor should highlight each item so the user can perform the selection. See the attached video.

This happens in Catalina on the Mac.

Summary: Context Menu - can't make any selection → Context Menu - can't make any selection (mouse-hover focus flickers on menu entries)

The Bugbug bot thinks this bug should belong to the 'Firefox::Bookmarks & History' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Bookmarks & History
See Also: → 1261327, 1675935

In my opinion, this is a significant UI bug which has lingered for quite a while, and probably affects a lot of users. Managing bookmarks through the context menu is an integral part of the UI.

[Tracking Requested - why for this release]: It's an important UI issue. This seems to be a serious problem for some users.

Component: Bookmarks & History → DOM: UI Events & Focus Handling
Product: Firefox → Core

Is this a regression?
And is this perhaps Mac only? (I can't reproduce on linux)

I could reproduce on Mac on 80, but not 74, I will try to find a regression window.

31:47.67 INFO: Last good revision: 9d2e5cd8c3c9c728d9d5e027fefd2fd3989b1880
31:47.67 INFO: First bad revision: 2c022fc5b638633885787aa94f1e46a7e6713956
31:47.67 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=9d2e5cd8c3c9c728d9d5e027fefd2fd3989b1880&tochange=2c022fc5b638633885787aa94f1e46a7e6713956

Regressed by: 1645773
Has Regression Range: --- → yes
See Also: → 1691363
Status: UNCONFIRMED → NEW
Ever confirmed: true

:emilio: as it's a regression of bug 1645773, do you mind having a closer look at it?

Flags: needinfo?(emilio)

Seems like triggering reflows on hover for these has undesired side effects
which I don't really have time to dig into right now, so for now restore the
behavior to the behavior before my patch.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

That should do. Though maybe there's an slightly better fix which should deal with most other cases here, let me check...

This happens on various Macs with Catalina and High Sierra.

This is an optimization, but also papers about XUL widgets not dealing
particularly well with it.

(In reply to AllanB from comment #10)

This happens on various Macs with Catalina and High Sierra.

Yeah, my fix should deal with all mac versions. But comment 11 is perhaps preferable too, since it should also make stuff faster in other cases.

Flags: needinfo?(emilio)
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aa4c7f4629ff Don't reflow for background/border changes on xul appearance values. r=jfkthame
Attachment #9203196 - Attachment is obsolete: true
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
Flags: qe-verify+

Confirmed issue with 82.0 on macOS 10.15/11.2.
Verified with atrif on 87.0 on macOS 10.15/11.2.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: