Bug 1691256 - Don't reflow for background/border changes on xul appearance values. r=jfkthame

This is an optimization, but also papers about XUL widgets not dealing
particularly well with it.

Differential Revision: https://phabricator.services.mozilla.com/D105169